started documentation of tests
